--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 
 .cart {
     margin: 21px 16px 7px 0px;
+    text-align: center;
 }
 
 
@@ -27,7 +28,7 @@ body{
 }
 
 .nav-head1 {
-    width: 746px;
+    width: 610px;
     text-align: center;
     padding: 10px;
 }
